Page MenuHome GnuPG

scd: loop forever with reader_port, when open_pcsc_reader failed
Closed, ResolvedPublic

Description

Apply D547 for GnuPG 2.3.

Event Timeline

gniibe triaged this task as Normal priority.Jan 4 2022, 6:44 AM
gniibe created this task.

The problem was the error handling.
I didn't apply the patch directly, but improved the code paths.

gniibe renamed this task from scd: reader_port to scd: loop forever with reader_port, when open_pcsc_reader failed.Jan 4 2022, 7:02 AM
gniibe claimed this task.
gniibe added a project: Restricted Project.
gniibe removed a project: Restricted Project.